
option java_outer_classname="GetHashmapCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message GetHashmapCommand {
	optional int64 requestId = 1;
}